woz_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: woz-service
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: woz-app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woz-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: woz-custom
  replicas: 1
  template:
    metadata:
      labels:
        app: woz-app
        app.kubernetes.io/name: woz-custom
    spec:
      containers:
      - name: woz
        image: woz:latest
        imagePullPolicy: Never
        stdin: true
        ports:
          - containerPort: 3000
